src/test/deca/context/valid/test_init_compatible_string.deca
// Description:
//   Initialisation d'une variable de type string
//
// Resultats:
//
// Historique:
//    cree le 01/01/2024

{
   string s = "Hello" ;
}
